--- a/src/main/resources/me/t3sl4/textfileencoder/text-encode-view.fxml
+++ b/src/main/resources/me/t3sl4/textfileencoder/text-encode-view.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -26,10 +26,10 @@
                 <TextArea fx:id="textInput" layoutX="31.0" layoutY="57.0" prefHeight="40.0" prefWidth="279.0" promptText="Lütfen şifrelemek istediğiniz metni girin..." />
                 <TextArea fx:id="plainTextArea" layoutX="14.0" layoutY="146.0" prefHeight="200.0" prefWidth="297.0" promptText="Metnin normal hali..." />
                 <TextArea fx:id="cipherTextArea" layoutX="324.0" layoutY="146.0" prefHeight="200.0" prefWidth="297.0" promptText="Metnin şifrelenmiş hali..." />
-                <Button fx:id="sendButton" layoutX="884.0" layoutY="344.0" mnemonicParsing="false" onAction="#sendButtonAction" text="Gönder !" />
+                <Button fx:id="sendButton" layoutX="824.0" layoutY="339.0" mnemonicParsing="false" onAction="#sendButtonAction" text="Gönder !" />
                 <Button fx:id="encrypButton" layoutX="126.0" layoutY="108.0" mnemonicParsing="false" onAction="#encryptPlainText" text="Şifrele !" />
                 <TextArea fx:id="keyTextArea" layoutX="324.0" layoutY="57.0" prefHeight="40.0" prefWidth="279.0" promptText="Lütfen anahtar girin..." />
-                <Button fx:id="fileEncodingButton" layoutX="58.0" layoutY="405.0" mnemonicParsing="false" onAction="#fileEncodingButton" text="Choose File" />
+                <Button fx:id="fileEncodingButton" layoutX="23.0" layoutY="406.0" mnemonicParsing="false" onAction="#fileEncodingButton" text="Choose File" />
                 <Label layoutX="40.0" layoutY="14.0" text="Text Encode Section">
                     <font>
                         <Font name="System Bold" size="12.0" />
@@ -40,27 +40,44 @@
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Label>
-                <Button fx:id="encodeFile" layoutX="530.0" layoutY="405.0" mnemonicParsing="false" onAction="#encodeSelectedFile" text="Şifrele !" />
-                <Label layoutX="635.0" layoutY="227.0" text="Send Section">
+                <Button fx:id="encodeFile" layoutX="495.0" layoutY="406.0" mnemonicParsing="false" onAction="#encodeSelectedFile" text="Şifrele !" />
+                <Label layoutX="640.0" layoutY="330.0" text="Send Section">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Label>
-                <ListView layoutX="748.0" layoutY="238.0" prefHeight="99.0" prefWidth="352.0" />
-                <Label layoutX="292.0" layoutY="387.0" text="Selected File" />
+                <Label layoutX="257.0" layoutY="388.0" text="Selected File" />
                 <CheckBox fx:id="showKeyField" layoutX="428.0" layoutY="14.0" mnemonicParsing="false" onAction="#showKey" text="Key" />
                 <Button fx:id="setKey" layoutX="425.0" layoutY="108.0" mnemonicParsing="false" onAction="#settingKey" text="Anahtar Belirle" />
-                <TextField fx:id="selectedFilePath" editable="false" layoutX="141.0" layoutY="405.0" prefHeight="25.0" prefWidth="381.0" />
+                <TextField fx:id="selectedFilePath" editable="false" layoutX="106.0" layoutY="406.0" prefHeight="25.0" prefWidth="381.0" />
                 <TextField fx:id="selectedKeyField" editable="false" layoutX="476.0" layoutY="10.0" promptText="Belirlenen Anahtar" />
                 <TextField fx:id="fileExtension" editable="false" layoutX="425.0" layoutY="375.0" visible="false" />
                 <Button fx:id="clearButton" layoutX="563.0" layoutY="349.0" mnemonicParsing="false" onAction="#clearEncodedText" text="Temizle !" />
-                <Label layoutX="635.0" layoutY="88.0" text="Connection Section">
+                <Label layoutX="640.0" layoutY="246.0" text="Connection Section">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Label>
-                <TextField fx:id="nicknameField" layoutX="764.0" layoutY="120.0" promptText="Kullanıcı adı belirle..." />
-                <Button fx:id="connectButton" layoutX="946.0" layoutY="120.0" mnemonicParsing="false" onAction="#connectionButton" text="Bağlan !" />
+                <TextField fx:id="nicknameField" layoutX="769.0" layoutY="278.0" promptText="Kullanıcı adı belirle..." />
+                <Button fx:id="connectButton" layoutX="951.0" layoutY="278.0" mnemonicParsing="false" onAction="#connectionButton" text="Bağlan !" />
+                <Label layoutX="639.0" layoutY="48.0" text="Encryption Status">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
+                <Label layoutX="689.0" layoutY="99.0" text="Text Encryption :">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
+                <Label layoutX="694.0" layoutY="177.0" text="File Encryption :">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
+                <ImageView fx:id="textEncryptionImageView" fitHeight="69.0" fitWidth="99.0" layoutX="821.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="fileEncryptionImageView" fitHeight="76.0" fitWidth="99.0" layoutX="821.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true" />
+                <Button fx:id="clearButtonFile" layoutX="563.0" layoutY="406.0" mnemonicParsing="false" onAction="#clearEncodedFile" text="Temizle !" />
             </children>
         </AnchorPane>
     </children>
